--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wallpaper Download Gallery</title>
     <link rel="stylesheet" href="Style.css">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8334790302167359"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
